add platform Finder, optim